[package]
name = "extprim"
version = "1.2.2"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Extra primitive types (u128, i128)"
repository = "https://github.com/kennytm/extprim"
license = "MIT OR Apache-2.0"
keywords = ["primitives","u128","i128"]
categories = ["algorithms"]
documentation = "https://docs.rs/extprim"
build = "build.rs"

include = [
    "build.rs",
    "src/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE*.txt",
]

[badges]
travis-ci = { repository = "kennytm/extprim" }
appveyor = { repository = "kennytm/extprim" }

[workspace]
members = ["extprim_literals", "extprim_literals_macros", "extprim_tests"]

[dependencies]
rand = { version = "0.3.15", optional = true }
num-traits = "0.1.37"

[dev-dependencies]
extprim_literals = { version = "2.0.0", path = "./extprim_literals" }

[build-dependencies]
rustc_version = "0.2.0"

[features]
default = ["use-std", "rand"]
use-std = []

