[package]
name = "extprim"
version = "1.7.0"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Extra primitive types (u128, i128)"
repository = "https://github.com/kennytm/extprim"
license = "MIT/Apache-2.0"
keywords = ["primitives","u128","i128"]
categories = ["algorithms"]
documentation = "https://docs.rs/extprim"
build = "build.rs"

include = [
    "build.rs",
    "src/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE*.txt",
]

[badges]
travis-ci = { repository = "kennytm/extprim" }
appveyor = { repository = "kennytm/extprim" }
is-it-maintained-issue-resolution = { repository = "kennytm/extprim" }
is-it-maintained-open-issues = { repository = "kennytm/extprim" }
coveralls = { repository = "kennytm/extprim" }

[workspace]
members = ["extprim_literals", "extprim_literals_macros", "extprim_tests"]

[dependencies]
# note: upgrading to rand 0.7 requires 'dyn' support i.e. rust 1.27+
rand = { version = "0.6", optional = true }
num-traits = "0.2"
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
extprim_literals = { version = "2.0", path = "./extprim_literals" }
# note: pin the version of serde_derive to 1.0.98 or below,
# so we don't need to depend on proc-macro2 v1.0
serde_derive = ">=1.0.0,<=1.0.98"

[build-dependencies]
rustc_version = "0.2"
semver = "0.9"

[features]
default = ["use-std", "rand", "serde"]
use-std = []

