[package]
name = "extprim_literals_macros"
version = "2.0.2"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Internal crate to support `extprim_literals`. You typically don't need this crate directly."
repository = "https://github.com/kennytm/extprim"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/extprim/"

include = [
    "src/*.rs",
    "Cargo.toml",
    "LICENSE-*.txt",
]

[lib]
name = "extprim_literals_macros"
proc-macro = true

[dependencies]
extprim = { path = "../", version = "1.3" }
procedural-masquerade = "0.1"
