[package]
name = "extprim_tests"
version = "1.2.2"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Test case for extprim literals"
repository = "https://github.com/kennytm/extprim"
license = "MIT OR Apache-2.0"

include = [
    "tests/*.rs*",
    "Cargo.toml",
]

[dev-dependencies]
extprim = { path = "../", version = "1.2.2" }
extprim_literals = { path = "../extprim_literals", version = "2.0.0" }
