[package]
name = "extprim_tests"
version = "1.3.0"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Test case for extprim literals"
repository = "https://github.com/kennytm/extprim"
license = "MIT/Apache-2.0"
publish = false

include = [
    "tests/*.rs*",
    "Cargo.toml",
]

[dev-dependencies]
extprim = { path = "../", version = "1.3" }
extprim_literals = { path = "../extprim_literals", version = "2.0" }
